--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "mongoose": "^8.9.3",
     "pinia": "^2.2.8",
     "swiper": "^11.1.12",
     "vue": "^3.2.13",
