--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.1",
     "pinia": "^2.2.8",
     "swiper": "^11.1.12",
     "vue": "^3.2.13",
